--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -6,6 +6,9 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-align: center;
   margin: 0;
   padding: 0;
@@ -21,16 +24,7 @@
   display: none;
 }
 
-@media all and (min-width: 480px) {
-  .App {
-    display: -ms-grid;
-    display: grid;
-    grid: 100vh 100vh / 40% 60%;
-        grid-template-areas: "intro intro" "about projects";
-  }
-}
-
-@media all and (min-width: 769px) {
+@media all and (min-width: 768px) {
   .App {
     display: -ms-grid;
     display: grid;
@@ -77,7 +71,7 @@
   height: 100vh;
 }
 
-@media all and (min-width: 480px) {
+@media all and (min-width: 768px) {
   .App .Intro {
     grid-area: intro;
   }
@@ -136,8 +130,9 @@
 
 .App .About {
   position: relative;
-  background-color: #fff;
   width: 100%;
+  padding-left: 10px;
+  padding-right: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -152,9 +147,10 @@
   height: -webkit-max-content;
   height: -moz-max-content;
   height: max-content;
+  overflow: hidden;
 }
 
-@media all and (min-width: 480px) {
+@media all and (min-width: 768px) {
   .App .About {
     grid-area: about;
     height: 100%;
@@ -175,13 +171,7 @@
   height: -webkit-max-content;
   height: -moz-max-content;
   height: max-content;
-  margin-top: 0.8rem;
-}
-
-@media all and (min-width: 480px) {
-  .App .About .SectionTitleGrouping {
-    margin-left: 1.5rem;
-  }
+  padding: 1rem;
 }
 
 .App .About .SectionTitleGrouping .section-title {
@@ -198,21 +188,8 @@
   width: 70px;
 }
 
-@media all and (min-width: 480px) {
-  .App .About .about-content-container {
-    -webkit-box-shadow: 4px 7px 13px 3px rgba(0, 0, 0, 0.1);
-            box-shadow: 4px 7px 13px 3px rgba(0, 0, 0, 0.1);
-    border-radius: 12px;
-    margin-left: 1.5rem;
-    margin-right: 1rem;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    padding: 3.73%;
-    overflow: hidden;
-  }
-}
-
 .App .About .about-content-container .profile-picture-contents-intro-container {
+  margin-top: 0.8rem;
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -220,7 +197,6 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 4%;
   height: -webkit-max-content;
   height: -moz-max-content;
   height: max-content;
@@ -258,7 +234,7 @@
   padding: 7.5%;
 }
 
-@media all and (min-width: 480px) {
+@media all and (min-width: 768px) {
   .App .About .about-content-container .profile-picture-contents-intro-container .profile-picture-contents-container .contents-container {
     display: none;
   }
@@ -346,17 +322,29 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  height: 225px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 275px;
   width: 100%;
-  margin-top: 1.75rem;
-  margin-bottom: 2.5rem;
-  padding-top: 1rem;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+
+@media all and (min-width: 768px) {
+  .App .About .about-content-container .technology-cards-container {
+    -webkit-box-shadow: 4px 7px 13px 3px rgba(0, 0, 0, 0.1);
+            box-shadow: 4px 7px 13px 3px rgba(0, 0, 0, 0.1);
+    border-radius: 12px;
+    padding-top: 2rem;
+    overflow: hidden;
+  }
 }
 
 .App .About .about-content-container .technology-cards-container .swipe-card {
   background-color: #ffffff;
   position: absolute;
-  height: 100%;
+  height: 225px;
   width: 150px;
   border-radius: 12px;
   -webkit-box-shadow: 5px 6px 10px 3px rgba(0, 0, 0, 0.1);
@@ -407,7 +395,7 @@
   height: max-content;
 }
 
-@media all and (min-width: 480px) {
+@media all and (min-width: 768px) {
   .App .Projects {
     grid-area: projects;
     height: 100%;
@@ -425,7 +413,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: 0.8rem;
+  padding: 1rem;
 }
 
 .App .Projects .SectionTitleGrouping .section-title {
@@ -443,50 +431,12 @@
 }
 
 .App .Projects .project-card-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-@media all and (min-width: 768px) and (orientation: landscape) {
-  .App .Projects .project-card-container {
-    display: -ms-grid;
-    display: grid;
-    grid: 1fr 1fr 1fr 1fr / 1fr 1fr;
-    overflow-y: scroll;
-    margin-top: 1rem;
-  }
-}
-
-@media all and (min-width: 768px) and (orientation: portrait) {
-  .App .Projects .project-card-container {
-    margin-top: 1rem;
-    overflow-y: scroll;
-  }
-}
-
-@media all and (min-width: 1024px) {
-  .App .Projects .project-card-container {
-    display: -ms-grid;
-    display: grid;
-    grid: 1fr 1fr 1fr 1fr / 1fr 1fr;
-    overflow-y: scroll;
-    margin-top: 1rem;
-  }
-}
-
-@media all and (min-width: 1366px) {
-  .App .Projects .project-card-container {
-    display: -ms-grid;
-    display: grid;
-    grid: 1fr 1fr 1fr / 1fr 1fr 1fr;
-    overflow-y: scroll;
-    margin-top: 1rem;
-  }
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(320px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  width: 100%;
+  overflow-y: scroll;
 }
 
 .App .Projects .project-card-container .project-card-page-2 {
@@ -633,6 +583,7 @@
   padding-bottom: 0.15rem;
   padding-left: 0.8rem;
   padding-right: 0.8rem;
+  cursor: pointer;
 }
 
 .App .Projects .project-card-container .project-card-page-2 .projects-container-front .expand-image-icon-container {
@@ -698,6 +649,7 @@
   background-color: #f24e4e;
   padding: 0.2rem;
   font-size: 2.2rem;
+  cursor: pointer;
 }
 
 .App .Projects .project-card-container .project-card-page-2 .projects-container-back .project-information-container {
@@ -763,7 +715,7 @@
   overflow: hidden;
 }
 
-@media all and (min-width: 480px) {
+@media all and (min-width: 768px) {
   .App .Contact {
     display: none;
   }
