--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -37,8 +37,8 @@
   .App {
     display: -ms-grid;
     display: grid;
-    grid: 100vh 100vh / 25% 75%;
-        grid-template-areas: "intro intro" "about projects";
+    grid: 100vh 90vh 10vh / 25% 75%;
+        grid-template-areas: "intro intro" "about projects" "contact projects";
   }
 }
 
@@ -122,8 +122,6 @@
 .App .About {
   position: relative;
   width: 100%;
-  padding-left: 15px;
-  padding-right: 15px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -138,6 +136,8 @@
   height: -moz-max-content;
   height: max-content;
   overflow: hidden;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 @media all and (min-width: 1024px) {
@@ -184,7 +184,7 @@
 
 @media all and (min-width: 768px) {
   .App .About .about-container .about-content-container-no-title {
-    border: 1px dashed #ccc;
+    border: 2.5px dashed #ccc;
     border-radius: 12px;
     padding: 1rem;
     overflow: hidden;
@@ -306,7 +306,6 @@
   border-radius: 12px;
   -webkit-box-shadow: 4px 7px 13px 3px rgba(0, 0, 0, 0.1);
           box-shadow: 4px 7px 13px 3px rgba(0, 0, 0, 0.1);
-  font-size: 2rem;
 }
 
 .App .About .about-container .about-content-container-no-title .profile-picture-contents-intro-container .profile-paragraph-container .quotation-marks {
@@ -329,18 +328,25 @@
           align-items: center;
   height: 275px;
   width: 100%;
-  padding-top: 3rem;
+  padding-top: 3.5rem;
+}
+
+@media all and (min-width: 1024px) {
+  .App .About .about-container .about-content-container-no-title .technology-cards-container {
+    height: 220px;
+    margin-top: 1.5rem;
+  }
 }
 
 .App .About .about-container .about-content-container-no-title .technology-cards-container .swipe-card {
+  position: relative;
   background-color: #ffffff;
   position: absolute;
-  height: 225px;
-  width: 150px;
+  height: 200px;
+  width: 135px;
   border-radius: 12px;
   -webkit-box-shadow: 5px 6px 10px 3px rgba(0, 0, 0, 0.1);
           box-shadow: 5px 6px 10px 3px rgba(0, 0, 0, 0.1);
-  overflow-x: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -351,14 +357,18 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .App .About .about-container .about-content-container-no-title .technology-cards-container .swipe-card .swipe-card-image {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center center;
-  margin-top: 1.5em;
-  height: 70%;
+  height: 80%;
   width: 90%;
 }
 
@@ -388,8 +398,8 @@
 
 @media all and (min-width: 768px) {
   .App .Projects {
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 }
 
@@ -448,9 +458,8 @@
 
 @media all and (min-width: 768px) {
   .App .Projects .project-card-container {
-    border: 1px dashed #ccc;
+    border: 2.5px dashed #ccc;
     border-radius: 12px;
-    padding: 1rem;
   }
 }
 
@@ -646,7 +655,7 @@
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
-  border-bottom: 1px dashed #ccc;
+  border-bottom: 2.5px dashed #ccc;
   padding: 1rem;
 }
 
@@ -717,7 +726,6 @@
 
 .App .Contact {
   position: relative;
-  background-color: #252934;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -728,14 +736,20 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 100%;
-  height: 40vh;
-  overflow: hidden;
+}
+
+@media all and (min-width: 768px) {
+  .App .Contact {
+    display: none;
+  }
 }
 
 @media all and (min-width: 1024px) {
   .App .Contact {
-    display: none;
+    grid-area: contact;
+    -ms-flex-item-align: end;
+        -ms-grid-row-align: end;
+        align-self: end;
   }
 }
 
@@ -750,8 +764,13 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: 2.5em;
-  margin-bottom: 0.5em;
+  padding: 1rem;
+}
+
+@media all and (min-width: 1024px) {
+  .App .Contact .SectionTitleGrouping {
+    display: none;
+  }
 }
 
 .App .Contact .SectionTitleGrouping .section-title {
@@ -759,11 +778,11 @@
   font-weight: 600;
   font-size: 2rem;
   text-transform: uppercase;
-  color: #ffffff;
+  color: #252934;
 }
 
 .App .Contact .SectionTitleGrouping .section-title-underline {
-  background: #ffffff;
+  background: #252934;
   height: 4px;
   width: 70px;
 }
@@ -775,9 +794,10 @@
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
-  margin-top: 20px;
   width: 55%;
-  padding: 2%;
   border-radius: 12px;
+  padding: 1rem;
+  margin-bottom: 15px;
+  background-color: #252934;
 }
 /*# sourceMappingURL=style.css.map */
