--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -34,10 +34,11 @@
     }
     @media all and (min-width: 1366px) {
         display: grid;
-        grid:  100vh 100vh / 25% 75%;
+        grid:  100vh 90vh 10vh / 25% 75%;
         grid-template-areas: 
             "intro intro"
-            "about projects";
+            "about projects"
+            "contact projects";
     }
     .Intro {
         position: relative;
@@ -92,13 +93,13 @@
     .About {
         position: relative;
         width: 100%;
-        padding-left: 15px;
-        padding-right: 15px;
         display: flex;
         flex-direction: column;
         align-items: center;
         height: max-content;
         overflow: hidden;
+        padding-left: 1rem;
+        padding-right: 1rem;
         @media all and (min-width: 1024px) {
             grid-area: about;
             height: 100%;
@@ -126,7 +127,7 @@
             .about-content-container-no-title {
                 max-width: 400px;
                 @media all and (min-width: 768px) {
-                    border: 1px dashed #ccc;
+                    border: 2.5px dashed #ccc;
                     border-radius: 12px;
                     padding: 1rem;
                     overflow: hidden;
@@ -201,7 +202,6 @@
                         transition: all .4s cubic-bezier(0.175, 0.885, 0, 1);
                         border-radius: 12px;
                         box-shadow: 4px 7px 13px 3px rgba(0, 0, 0,0.1);
-                        font-size: 2rem;
                         .quotation-marks {
                             white-space: nowrap;
                             color: #f24e4e;
@@ -217,24 +217,30 @@
                     align-items: center;
                     height: 275px;
                     width: 100%;
-                    padding-top: 3rem;
+                    padding-top: 3.5rem;
+                    @media all and (min-width: 1024px) {
+                        height: 220px;
+                        margin-top: 1.5rem;
+                    }
                     .swipe-card {
+                        position: relative;
                         background-color: #ffffff;
                         position: absolute;
-                        height: 225px;
-                        width: 150px;
+                        height: 200px;
+                        width: 135px;
                         border-radius: 12px;
                         box-shadow: 5px 6px 10px 3px rgba(0, 0, 0,0.1);
-                        overflow-x: hidden;
                         display: flex;
                         flex-direction: column;
                         align-items: center;
+                        justify-content: space-between;
+                        padding-top: 1rem;
+                        padding-bottom: 1rem;
                         .swipe-card-image {
                             background-size: contain;
                             background-repeat: no-repeat;
                             background-position: center center;
-                            margin-top: 1.5em;
-                            height: 70%;
+                            height: 80%;
                             width: 90%;
                         }
                         .swipe-card-title {
@@ -255,8 +261,8 @@
         align-items: center;
         height: max-content;
         @media all and (min-width: 768px) {
-            padding-left: 15px;
-            padding-right: 15px;
+            padding-left: 1rem;
+            padding-right: 1rem;
         }
         @media all and (min-width: 1024px) {
             grid-area: projects;
@@ -292,9 +298,8 @@
                 max-width: 400px;
             }
             @media all and (min-width: 768px) {
-                border: 1px dashed #ccc;
+                border: 2.5px dashed #ccc;
                 border-radius: 12px;
-                padding: 1rem;    
             }
             .project-card-page-2 {
                 position: relative;
@@ -418,7 +423,7 @@
                         justify-content: center;
                         align-items: center;
                         width: 100%;
-                        border-bottom: 1px dashed #ccc;
+                        border-bottom: 2.5px dashed #ccc;
                         padding: 1rem;
                     }
                     .flip-back-button-container {
@@ -476,31 +481,33 @@
     }
     .Contact {
         position: relative;
-        background-color: #252934;
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 100%;
-        height: 40vh;
-        overflow: hidden;
-        @media all and (min-width: 1024px) {
+        @media all and (min-width: 768px) {
             display: none;
+        }
+        @media all and (min-width: 1024px) {
+            grid-area: contact;
+            align-self: end;
         }
         .SectionTitleGrouping {
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin-top: 2.5em;
-            margin-bottom: 0.5em;
+            padding: 1rem;
+            @media all and (min-width: 1024px) {
+                display: none;
+            }
             .section-title {
                 font-family: 'Raleway', sans-serif;
                 font-weight: 600;
                 font-size: 2rem;
                 text-transform: uppercase;
-                color: #ffffff;
+                color: #252934;
             }
             .section-title-underline {
-                background: #ffffff;
+                background: #252934;
                 height: 4px;
                 width: 70px;
             }
@@ -508,10 +515,11 @@
         .social-icons-container {
             display: inline-flex;
             justify-content: space-evenly;
-            margin-top: 20px;
             width: 55%;
-            padding: 2%;
             border-radius: 12px;
+            padding: 1rem;
+            margin-bottom: 15px;
+            background-color: #252934;
         }
     }   
 }
