--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -488,6 +488,7 @@
             display: none;
         }
         @media all and (min-width: 1024px) {
+            display: flex;
             grid-area: contact;
             align-self: end;
         }
