--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -111,6 +111,7 @@
                 align-items: center;
                 height: max-content;
                 padding: 1rem;
+                border: solid;
                 .section-title {
                     font-family: 'Raleway', sans-serif;
                     font-weight: 600;
@@ -254,7 +255,6 @@
     }
     .Projects {
         position: relative;
-        background-color: #fff;
         width: 100%;
         display: flex;
         flex-direction: column;
@@ -269,21 +269,27 @@
             height: 100%;
         }
         .SectionTitleGrouping {
+            position: relative;
             display: flex;
             flex-direction: column;
             align-items: center;
             padding: 1rem;
+            border: solid;
             .section-title {
+                position: relative;
                 font-family: 'Raleway', sans-serif;
                 font-weight: 600;
                 font-size: 2rem;
                 text-transform: uppercase;
                 color: #252934;
+                border: solid red;
             }
             .section-title-underline {
+                position: relative;
                 background: #252934;
                 height: 4px;
                 width: 70px;
+                border: solid red;
             }
         }
         .project-card-container {
